[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/tools/scripts/dropped_pouch.gd" type="Script" id=1]
[ext_resource path="res://assets/items/tools/Pouch.png" type="Texture" id=2]
[ext_resource path="res://src/UI/hud/pouch_overlay.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="dropped_pouch" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -4 )

[node name="area" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="pouch_overlay" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false
[connection signal="body_entered" from="." to="." method="_on_dropped_pouch_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_dropped_pouch_body_exited"]
